[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "transport-lookout"
version = "0.1.0"
description = "Authorized, policy-governed network scanning control plane"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.30,<1",
  "sqlalchemy>=2.0,<3",
  "psycopg[binary]>=3.2,<4",
  "pydantic-settings>=2.5,<3",
  "celery>=5.4,<6",
  "pyjwt[crypto]>=2.9,<3",
  "alembic>=1.13,<2",
  "prometheus-client>=0.21,<1",
]

[project.optional-dependencies]
dev = ["httpx>=0.27", "pytest>=8", "pytest-cov>=5", "ruff>=0.6"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
